Added change in assignment 2 of core node 2

--- a/block-BNaabf/form.html
+++ b/block-BNaabf/form.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form method="POST" action="http://localhost:5678/form">
+    <form method="POST" action="/form">
         <input type="text" name="name" placeholder="Enter your name">
         <input type="email" name="email" placeholder="Enter your email">
         <input type="number" name="age" placeholder="Enter your Age">
